# things_eeg2_dataset

./: .gitignore  LICENSE  README.md  pyproject.toml  vhs.sh
.github/: release.yml
.github/assets/demo/: demo-dark.tape  demo-light.tape
.github/workflows/: ci.yml  publish.yml
src/things_eeg2_dataset/: paths.py
src/things_eeg2_dataset/cli/: logger.py  main.py  profiling.py  show.py
src/things_eeg2_dataset/dataloader/: dataset.py  sample_info.py
src/things_eeg2_dataset/processing/: __init__.py  pipeline.py
src/things_eeg2_dataset/processing/downloading/: downloader.py
src/things_eeg2_dataset/processing/eeg_processing/: epoching.py  raw_processor.py  save.py  whiten.py
src/things_eeg2_dataset/processing/embedding_processing/: __init__.py  embedding_generators.py
src/things_eeg2_dataset/processing/embedding_processing/embedding_models/ip_adapter/: ip_adapter.py  ip_adapter_faceid.py  ip_adapter_faceid_separate.py
tests/test_preprocessing/: test_pipeline.py  test_pipeline_directories.py  test_preprocessor.py
